Fix hidden text overflow style issue

--- a/packages/frontend/src/components/navigation/components/Menu/components/Option/index.module.css
+++ b/packages/frontend/src/components/navigation/components/Menu/components/Option/index.module.css
@@ -23,7 +23,7 @@
     background-color: var(--navigation-option-primary);
     
     width: calc(100% - (2 * 0.4rem));
-    padding: 0.6rem 0.4rem;
+    padding: 0.2rem 0.4rem;
     margin: 0px;
 
     transition: border-radius 0.3s ease-in-out 0s,
@@ -68,6 +68,8 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+
+    padding: 0.4rem 0rem;
 }
 
 .text {
